--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
-
+    <header>
+        <span class="large">Instashoot</span>
+    </header>
+    <main>
+        <!--Lägg till bilder...-->
+    </main>
 </body>
 
 </html>
